Added the SettingsActivity.kt where you can update your user data

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grayCard">#CFCFCF</color>
+    <color name="green">#0CB10F</color>
 </resources>
