--- a/app/src/main/res/layout/products_layout.xml
+++ b/app/src/main/res/layout/products_layout.xml
@@ -12,6 +12,7 @@
     >
 
     <RelativeLayout
+        android:id="@+id/rlCardProduct"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
