--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grayCard">#CFCFCF</color>
+    <color name="gray">#888686</color>
     <color name="green">#0CB10F</color>
 </resources>
