--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -27,14 +27,27 @@
             android:id="@+id/tvCartItemQuantity"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/tvCartItemName"
+            android:padding="10dp"
             android:text="Product Quantity"
+            android:textAlignment="textEnd"
             android:textColor="@color/white"
             android:textSize="14dp"
-            android:padding="10dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvRemoveItemFormCart"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:text="X"
             android:textStyle="bold"
-            android:layout_alignParentEnd="true"
-            android:textAlignment="textEnd"
+            android:layout_toRightOf="@id/tvCartItemQuantity"
+            android:padding="20dp"
+            android:textSize="30dp"
+            android:textColor="@color/white"
+            android:gravity="center"
             />
+
 
         <TextView
             android:id="@+id/tvCartItemPrice"
