--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -6,30 +6,51 @@
     android:layout_height="match_parent"
     tools:context=".CartActivity">
 
-    <RelativeLayout
-        android:id="@+id/rlCartPrice"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarSettings"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/secondaryColor"
-        android:layout_alignParentTop="true">
+        android:layout_height="50dp"
+        android:background="@color/secondaryColor">
 
-        <TextView
-            android:id="@+id/tvTotalPriceCart"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_settings"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="@string/tvTotalPriceCart"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:textAlignment="center"
-            android:gravity="center"/>
+            android:layout_height="wrap_content">
 
-    </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/toolbar_settings_close"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/toolbar_settings_close_text"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:layout_alignParentStart="true"
+                    />
+
+                <TextView
+                    android:id="@+id/tvTotalPriceCart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tvTotalPriceCart"
+                    android:textColor="@color/white"
+                    android:textSize="20dp"
+                    android:textAlignment="center"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="50dp"/>
+            </RelativeLayout>
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvProductInCart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rlCartPrice"
+        android:layout_below="@+id/appBarSettings"
         android:layout_above="@+id/buttonNextCart"
         android:visibility="visible">
 
@@ -39,7 +60,7 @@
         android:id="@+id/tvNoProductsInCart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/rlCartPrice"
+        android:layout_below="@id/appBarSettings"
         android:layout_above="@id/buttonNextCart"
         android:text="@string/tvNoProductsInCart"
         android:textStyle="bold"
